<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartePlat" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/carte_plat"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_plat_retourcarte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="retourCarte"
        android:text="@string/carte" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_plat_retourcarte"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_viande1"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:text="@string/carte_viande1" />

        <Button
            android:id="@+id/button_viande2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@android:color/transparent"
            android:text="@string/carte_viande2" />

        <Button
            android:id="@+id/button_viande3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@android:color/transparent"
            android:text="@string/carte_viande3" />
        
        <Button
            android:id="@+id/button_viande4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@android:color/transparent"
            android:text="@string/carte_viande4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_salade1"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:text="@string/carte_salade1" />

        <Button
            android:id="@+id/button_salade2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@android:color/transparent"
            android:text="@string/carte_salade2" />

        <Button
            android:id="@+id/button_salade3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@android:color/transparent"
            android:text="@string/carte_salade3" />

        <Button
            android:id="@+id/button_salade4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@android:color/transparent"
            android:text="@string/carte_salade4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_poisson1"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:text="@string/carte_poisson1" />

        <Button
            android:id="@+id/button_poisson2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@android:color/transparent"
            android:text="@string/carte_poisson2" />

        <Button
            android:id="@+id/button_poisson3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@android:color/transparent"
            android:text="@string/carte_poisson3" />

        <Button
            android:id="@+id/button_poisson4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@android:color/transparent"
            android:text="@string/carte_poisson4" />
    </LinearLayout>

</RelativeLayout>