<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarteDessert" >

     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/carte_dessert"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_retourcarte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="retourCarte"
        android:text="@string/carte" />

    <Button
        android:id="@+id/buttondessert1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_retourcarte"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:text="@string/carte_dessert1" />

    <Button
        android:id="@+id/buttondessert2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttondessert1"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:text="@string/carte_dessert2" />
    
    <Button
        android:id="@+id/buttondessert3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttondessert2"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:text="@string/carte_dessert3" />
    
    <Button
        android:id="@+id/buttondessert4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttondessert3"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:text="@string/carte_dessert4" />
    
    <Button
        android:id="@+id/buttondessert5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttondessert4"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:text="@string/carte_dessert5" />

</RelativeLayout>